[tool.poetry]
name = "Cobra_Bot_Replit"
version = "0.1.0"
description = "Cobra Bot is a Discord Bot that helps you run Netrunner Tournaments using Discord."
authors = ["Adam Stradomski <adam.stradomski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
